# actbots

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.json  demo.py  live_demo.py  main.py  mypy.ini  plan.md  pyproject.toml  requirements.txt  test_api_name_extraction.py
.github/workflows/: test_runner.yml
docs/: dynamic_escalation_system.md  escalation_system.md  human_in_the_loop.md
jentic_agents/agents/: __init__.py  base_agent.py  interactive_cli_agent.py  simple_ui_agent.py
jentic_agents/communication/: __init__.py  base_controller.py  cli_controller.py  discord_controller.py
jentic_agents/communication/controllers/: base_controller.py  cli_controller.py  discord_controller.py
jentic_agents/communication/hitl/: __init__.py  base_intervention_hub.py  cli_intervention_hub.py  discord_intervention_hub.py
jentic_agents/communication/inbox/: __init__.py  base_inbox.py  cli_inbox.py  discord_inbox.py
jentic_agents/communication/outbox/: __init__.py  base_outbox.py  cli_outbox.py  discord_outbox.py
jentic_agents/examples/: __init__.py  escalation_example.py  hitl_example.py
jentic_agents/memory/: agent_memory.py  base_memory.py  scratch_pad.py  vector_store_memory.py
jentic_agents/platform/: jentic_client.py
jentic_agents/prompts/: agent_system_prompt.txt  bullet_plan.txt  context_analysis.txt  hybrid_classifier.txt  keyword_extraction.txt  param_correction_prompt.txt  param_generation.txt  reasoning_prompt.txt  reflection_prompt.txt  select_tool.txt
jentic_agents/reasoners/: __init__.py  base_reasoner.py  bullet_list_reasoner.py  freeform_reasoner.py  hybrid_reasoner.py  standard_reasoner.py
jentic_agents/tests/: test_agent_cli.py  test_controllers.py  test_inbox.py  test_integration.py  test_intervention_hubs.py  test_jentic_client.py  test_logger_timer.py  test_memory.py  test_outboxes.py  test_reasoner.py  test_vector_memory.py
jentic_agents/tests/mocks/: jentic_mock.py
jentic_agents/utils/: __init__.py  block_timer.py  config.json  config.py  json_cleanser.py  llm.py  logger.py  memory.py  parsing_helpers.py  parsing_utils.py  prompt_loader.py  shared_console.py
