[project]
name = "actbots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jentic>=0.8.1",
    "litellm>=1.0.0",
    "mypy>=1.16.1",
    "openai>=1.0",
    "pydantic>=2.0",
    "pytest>=8.0",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.0.0",
    "ruff>=0.12.2",
]
